Fix material shape errors when the view area is too short

--- a/css/hero.css
+++ b/css/hero.css
@@ -60,7 +60,8 @@ h1 a {
 }
 
 .hero-logo {
-  max-width: 25rem;
+  min-width: 25rem;
+  min-height: 25rem;
   position: relative;
   display: flex;
   width: 25rem;
